assignment_2/src/main/minigo/parser/.antlr/MiniGoParser.py
# Generated from c:/Users/nam/Desktop/BKUdoc/BK_3rd_year/PrincipleProgrammingLanguage/ass2_submit/initial/src/main/minigo/parser/MiniGo.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'if'", "'else'", "'for'", "'return'", 
                     "'func'", "'type'", "'struct'", "'interface'", "'string'", 
                     "'int'", "'float'", "'boolean'", "'const'", "'var'", 
                     "'continue'", "'break'", "'range'", "'nil'", "'true'", 
                     "'false'", "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", 
                     "'!'", "':='", "'+='", "'-='", "'*='", "'/='", "'%='", 
                     "'='", "'.'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "','", "';'", "':'" ]

    symbolicNames = [ "<INVALID>", "NL", "WS", "SG_CMT", "MUL_CMT", "IF", 
                      "ELSE", "FOR", "RETURN", "FUNC", "TYPE", "STRUCT", 
                      "INTERFACE", "STRING", "INT", "FLOAT", "BOOLEAN", 
                      "CONST", "VAR", "CONTINUE", "BREAK", "RANGE", "NIL", 
                      "TRUE", "FALSE", "ADD", "SUB", "MUL", "DIV", "MOD", 
                      "DBL_EQ", "NOT_EQ", "LT", "LE", "GT", "GE", "AND", 
                      "OR", "NOT", "AS_EQ", "ADD_EQ", "SUB_EQ", "MUL_EQ", 
                      "DIV_EQ", "MOD_EQ", "EQ", "DOT", "LCIB", "RCIB", "LCUB", 
                      "RCUB", "LSQB", "RSQB", "COMMA", "SECO", "COLON", 
                      "ID", "DEC", "BIN", "OCT", "HEX", "FLOAT_LIT", "STRING_LIT", 
                      "ERROR_CHAR", "ILLEGAL_ESCAPE", "UNCLOSE_STRING" ]

    RULE_int_lit = 0
    RULE_bool_lit = 1
    RULE_program = 2
    RULE_manydecl = 3
    RULE_stmt = 4
    RULE_stmt_block = 5
    RULE_decl = 6
    RULE_var_decl = 7
    RULE_var_decl_init = 8
    RULE_var_decl_uninit = 9
    RULE_const_decl = 10
    RULE_func_decl = 11
    RULE_function_decl = 12
    RULE_method_decl = 13
    RULE_rec = 14
    RULE_rec_type = 15
    RULE_not_last_para_func = 16
    RULE_tail_para_func = 17
    RULE_para_func = 18
    RULE_last_para_func = 19
    RULE_list_para_func = 20
    RULE_star_func_call_dot = 21
    RULE_func_call_stmt = 22
    RULE_func_call = 23
    RULE_function_call = 24
    RULE_method_call = 25
    RULE_list_arg = 26
    RULE_tail_arg = 27
    RULE_arg = 28
    RULE_arr_dim_decl = 29
    RULE_arr_type = 30
    RULE_arr_lit = 31
    RULE_list_ele_arr = 32
    RULE_tail_ele_arr = 33
    RULE_ele_arr = 34
    RULE_struct_decl = 35
    RULE_star_struct_ele_decl = 36
    RULE_attr_decl = 37
    RULE_struct_lit = 38
    RULE_list_ele_struct = 39
    RULE_tail_ele_struct = 40
    RULE_ele_struct = 41
    RULE_method_interface = 42
    RULE_star_interface_method_decl = 43
    RULE_interface_decl = 44
    RULE_not_last_para = 45
    RULE_tail_para = 46
    RULE_para = 47
    RULE_last_para = 48
    RULE_list_para = 49
    RULE_assign_stmt = 50
    RULE_assign_op = 51
    RULE_if_stmt = 52
    RULE_else_if = 53
    RULE_else_stmt = 54
    RULE_for_stmt = 55
    RULE_basic_for = 56
    RULE_init_for = 57
    RULE_init = 58
    RULE_condit = 59
    RULE_update = 60
    RULE_range_for = 61
    RULE_index = 62
    RULE_value = 63
    RULE_array_id = 64
    RULE_break_stmt = 65
    RULE_continue_stmt = 66
    RULE_return_stmt = 67
    RULE_rela_op = 68
    RULE_addsub = 69
    RULE_mudimo = 70
    RULE_unary = 71
    RULE_expr1 = 72
    RULE_expr2 = 73
    RULE_expr3 = 74
    RULE_expr4 = 75
    RULE_expr5 = 76
    RULE_expr6 = 77
    RULE_expr7 = 78
    RULE_operand = 79
    RULE_lit = 80
    RULE_primi = 81
    RULE_all_type = 82
    RULE_lhs = 83
    RULE_field = 84
    RULE_dims = 85
    RULE_dim = 86

    ruleNames =  [ "int_lit", "bool_lit", "program", "manydecl", "stmt", 
                   "stmt_block", "decl", "var_decl", "var_decl_init", "var_decl_uninit", 
                   "const_decl", "func_decl", "function_decl", "method_decl", 
                   "rec", "rec_type", "not_last_para_func", "tail_para_func", 
                   "para_func", "last_para_func", "list_para_func", "star_func_call_dot", 
                   "func_call_stmt", "func_call", "function_call", "method_call", 
                   "list_arg", "tail_arg", "arg", "arr_dim_decl", "arr_type", 
                   "arr_lit", "list_ele_arr", "tail_ele_arr", "ele_arr", 
                   "struct_decl", "star_struct_ele_decl", "attr_decl", "struct_lit", 
                   "list_ele_struct", "tail_ele_struct", "ele_struct", "method_interface", 
                   "star_interface_method_decl", "interface_decl", "not_last_para", 
                   "tail_para", "para", "last_para", "list_para", "assign_stmt", 
                   "assign_op", "if_stmt", "else_if", "else_stmt", "for_stmt", 
                   "basic_for", "init_for", "init", "condit", "update", 
                   "range_for", "index", "value", "array_id", "break_stmt", 
                   "continue_stmt", "return_stmt", "rela_op", "addsub", 
                   "mudimo", "unary", "expr1", "expr2", "expr3", "expr4", 
                   "expr5", "expr6", "expr7", "operand", "lit", "primi", 
                   "all_type", "lhs", "field", "dims", "dim" ]

    EOF = Token.EOF
    NL=1
    WS=2
    SG_CMT=3
    MUL_CMT=4
    IF=5
    ELSE=6
    FOR=7
    RETURN=8
    FUNC=9
    TYPE=10
    STRUCT=11
    INTERFACE=12
    STRING=13
    INT=14
    FLOAT=15
    BOOLEAN=16
    CONST=17
    VAR=18
    CONTINUE=19
    BREAK=20
    RANGE=21
    NIL=22
    TRUE=23
    FALSE=24
    ADD=25
    SUB=26
    MUL=27
    DIV=28
    MOD=29
    DBL_EQ=30
    NOT_EQ=31
    LT=32
    LE=33
    GT=34
    GE=35
    AND=36
    OR=37
    NOT=38
    AS_EQ=39
    ADD_EQ=40
    SUB_EQ=41
    MUL_EQ=42
    DIV_EQ=43
    MOD_EQ=44
    EQ=45
    DOT=46
    LCIB=47
    RCIB=48
    LCUB=49
    RCUB=50
    LSQB=51
    RSQB=52
    COMMA=53
    SECO=54
    COLON=55
    ID=56
    DEC=57
    BIN=58
    OCT=59
    HEX=60
    FLOAT_LIT=61
    STRING_LIT=62
    ERROR_CHAR=63
    ILLEGAL_ESCAPE=64
    UNCLOSE_STRING=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Int_litContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEC(self):
            return self.getToken(MiniGoParser.DEC, 0)

        def BIN(self):
            return self.getToken(MiniGoParser.BIN, 0)

        def OCT(self):
            return self.getToken(MiniGoParser.OCT, 0)

        def HEX(self):
            return self.getToken(MiniGoParser.HEX, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_int_lit




    def int_lit(self):

        localctx = MiniGoParser.Int_litContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_int_lit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2161727821137838080) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bool_litContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(MiniGoParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(MiniGoParser.FALSE, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_bool_lit




    def bool_lit(self):

        localctx = MiniGoParser.Bool_litContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_bool_lit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            _la = self._input.LA(1)
            if not(_la==23 or _la==24):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def manydecl(self):
            return self.getTypedRuleContext(MiniGoParser.ManydeclContext,0)


        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_program




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.manydecl()
            self.state = 179
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ManydeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MiniGoParser.DeclContext,0)


        def manydecl(self):
            return self.getTypedRuleContext(MiniGoParser.ManydeclContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_manydecl




    def manydecl(self):

        localctx = MiniGoParser.ManydeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_manydecl)
        try:
            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                self.decl()
                self.state = 182
                self.manydecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Var_declContext,0)


        def const_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Const_declContext,0)


        def assign_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.Assign_stmtContext,0)


        def func_call_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.Func_call_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.If_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.For_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.Continue_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.Return_stmtContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_stmt




    def stmt(self):

        localctx = MiniGoParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stmt)
        try:
            self.state = 196
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 187
                self.var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 188
                self.const_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 189
                self.assign_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 190
                self.func_call_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 191
                self.if_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 192
                self.for_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 193
                self.break_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 194
                self.continue_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 195
                self.return_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(MiniGoParser.StmtContext,0)


        def stmt_block(self):
            return self.getTypedRuleContext(MiniGoParser.Stmt_blockContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_stmt_block




    def stmt_block(self):

        localctx = MiniGoParser.Stmt_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stmt_block)
        try:
            self.state = 202
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 198
                self.stmt()
                self.state = 199
                self.stmt_block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Var_declContext,0)


        def const_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Const_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Func_declContext,0)


        def struct_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_declContext,0)


        def interface_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Interface_declContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_decl




    def decl(self):

        localctx = MiniGoParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_decl)
        try:
            self.state = 209
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 204
                self.var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 205
                self.const_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 206
                self.func_decl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 207
                self.struct_decl()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 208
                self.interface_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl_init(self):
            return self.getTypedRuleContext(MiniGoParser.Var_decl_initContext,0)


        def var_decl_uninit(self):
            return self.getTypedRuleContext(MiniGoParser.Var_decl_uninitContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_var_decl




    def var_decl(self):

        localctx = MiniGoParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var_decl)
        try:
            self.state = 213
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 211
                self.var_decl_init()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 212
                self.var_decl_uninit()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def EQ(self):
            return self.getToken(MiniGoParser.EQ, 0)

        def expr1(self):
            return self.getTypedRuleContext(MiniGoParser.Expr1Context,0)


        def SECO(self):
            return self.getToken(MiniGoParser.SECO, 0)

        def all_type(self):
            return self.getTypedRuleContext(MiniGoParser.All_typeContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_var_decl_init




    def var_decl_init(self):

        localctx = MiniGoParser.Var_decl_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_var_decl_init)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 215
            self.match(MiniGoParser.VAR)
            self.state = 216
            self.match(MiniGoParser.ID)
            self.state = 219
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13, 14, 15, 16, 51, 56]:
                self.state = 217
                self.all_type()
                pass
            elif token in [45]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 221
            self.match(MiniGoParser.EQ)
            self.state = 222
            self.expr1(0)
            self.state = 223
            self.match(MiniGoParser.SECO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_uninitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def all_type(self):
            return self.getTypedRuleContext(MiniGoParser.All_typeContext,0)


        def SECO(self):
            return self.getToken(MiniGoParser.SECO, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_var_decl_uninit




    def var_decl_uninit(self):

        localctx = MiniGoParser.Var_decl_uninitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_var_decl_uninit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 225
            self.match(MiniGoParser.VAR)
            self.state = 226
            self.match(MiniGoParser.ID)
            self.state = 227
            self.all_type()
            self.state = 228
            self.match(MiniGoParser.SECO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(MiniGoParser.CONST, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def EQ(self):
            return self.getToken(MiniGoParser.EQ, 0)

        def expr1(self):
            return self.getTypedRuleContext(MiniGoParser.Expr1Context,0)


        def SECO(self):
            return self.getToken(MiniGoParser.SECO, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_const_decl




    def const_decl(self):
